[gd_scene load_steps=2 format=3 uid="uid://dxpu8x5wkkvwo"]

[ext_resource type="Script" path="res://selector_body.gd" id="1_83c55"]

[node name="Selector" type="Node2D"]
script = ExtResource("1_83c55")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -200)
scale = Vector2(0.015, 0.015)

[node name="bPrevious" type="Button" parent="."]
offset_left = -53.0
offset_top = -17.0
offset_right = -35.0
offset_bottom = 14.0
text = "<"

[node name="tBody" type="RichTextLabel" parent="."]
offset_left = -20.0
offset_top = -14.0
offset_right = 21.0
offset_bottom = 11.0
bbcode_enabled = true
text = "Body"
fit_content = true
scroll_active = false

[node name="bNext" type="Button" parent="."]
offset_left = 33.0
offset_top = -16.0
offset_right = 51.0
offset_bottom = 15.0
text = ">"

[connection signal="button_up" from="bPrevious" to="." method="previous"]
[connection signal="button_up" from="bNext" to="." method="next"]
